# Python_for_beginners

./: Ch00 Index.ipynb  Ch01 Computing and Computers.ipynb  Ch02 Programming and Programming Languages.ipynb  Ch04 Dive into Python.ipynb  Ch05 Conditional and Repetitive Execution.ipynb  Ch06 Functions.ipynb  Ch07 File Handling.ipynb  Ch08.1-numpy.ipynb  Ch08.2-pandas.ipynb  Ch08.2.1-pandas-use case solar.ipynb  Ch08.4-explore.ipynb  Ch08.5-excel.ipynb  Ch09.Oplossingen deel 1.ipynb  Ch09.Oplossingen deel 2.ipynb  demo.py  first.csv  firstexample.txt  main.py  pyproject.toml  second.csv  third.csv  twopointlists.txt
data/: solar.csv
