[project]
name = "python-for-beginners"
version = "0.1.0"
description = "Python course for beginners - repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]
